[package]
name = "links"
version = "0.2.0"
edition = "2021"
publish = false
authors = ["janm-dev"]
description = "An easy to set up selfhostable link shortener."
license = "AGPL-3.0-or-later"
repository = "https://github.com/janm-dev/links"
rust-version = "1.62"
default-run = "server"

[features]
# Run tests involving a Redis server. Needs a running links-compatible Redis
# server on localhost:6379 (TCP) and localhost:6380 (TLS).
redis-tests = []
# Compile own OpenSSL as part of the build process of `openssl-sys` for use
# with the Redis backend. Enables the `vendored-tls` feature of `fred`.
vendored-openssl = ["fred/vendored-tls"]

[dependencies]
anyhow = "1.0.62"
arc-swap = "1.5.1"
async-trait = "0.1.57"
clap = { version = "3.2.19", features = [
	"derive",
	"env",
	"unstable-v4",
] }
colored = "2.0.0"
fred = { version = "5.1.0", features = [
	"enable-tls",
	"ignore-auth-error",
	"pool-prefer-active",
	"partial-tracing",
], default-features = false }
hyper = "0.14.20"
lazy_static = "1.4.0"
notify = "4.0.17"
parking_lot = "0.12.1"
pico-args = { version = "0.5.0", features = [
	"combined-flags",
], default-features = false }
prost = "0.11.0"
rand = "0.8.5"
regex = "1.6.0"
rustls-pemfile = "1.0.1"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
serde_yaml = "0.9.10"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = [
	"rt-multi-thread",
] }
tokio-rustls = "0.23.4"
toml = "0.5.9"
tonic = { version = "0.8.0", default-features = false, features = [
	"gzip",
	"tls",
	"tls-roots",
	"channel",
	"codegen",
	"prost",
] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
unicode-normalization = "0.1.21"
uriparse = "0.6.4"

[build-dependencies]
base64 = "0.13.0"
html-minifier = "3.0.15"
lol_html = "0.3.1"
minify-html = "0.9.2"
sha2 = "0.10.3"
tonic-build = "0.8.0"

[dev-dependencies]
regex = "1.6.0"
reqwest = { version = "0.11.11", default_features = false, features = [
	"rustls-tls-native-roots",
	"gzip",
] }
serial_test = "0.9.0"
tokio = { version = "1.20.1", features = ["full"] }

[profile.release]
incremental = false
debug = 0
lto = true
codegen-units = 1
opt-level = 3
panic = "unwind"
strip = true
