[package]
name = "links-domainmap"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["janm-dev"]
description = "A map with domain name keys with support for wildcards"
license = "AGPL-3.0-or-later"
repository = "https://github.com/janm-dev/links"
keywords = [
	"domain name",
	"map",
	"domainmap",
	"certificate",
	"dns",
]
categories = ["data-structures", "no-std"]
rust-version = "1.74"

[features]
default = ["std"]
# Enable features of links-domainmap that require the standard library
std = ["idna/std", "serde?/std"]
# Enable `serde` serialization and deserialization for `DomainMap` and `Domain`
serde = ["dep:serde"]

[[bench]]
name = "domain"
harness = false

[[bench]]
name = "map"
harness = false

[dependencies]
heapless = "0.8.0"
idna = { version = "1.0.3", default-features = false, features = [
	"alloc",
	"compiled_data",
] }
serde = { version = "1.0.215", optional = true, default-features = false, features = [
	"derive",
	"alloc",
] }

[dev-dependencies]
criterion = "0.5.1"
serde_json = { version = "1.0.133", default-features = false, features = [
	"alloc",
] }
