[package]
name = "links-id"
version = "0.2.0"
edition = "2021"
publish = false
authors = ["janm-dev"]
description = "Simple, readable, and compact identifiers intended for web-based applications."
license = "AGPL-3.0-or-later"
repository = "https://github.com/janm-dev/links"
rust-version = "1.77.0"

[features]
# Support for conversion to/from Redis types using `fred`
fred = ["dep:fred"]

[dependencies]
fred = { version = "9.3.0", optional = true, default-features = false }
lazy_static = "1.5.0"
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.6"

[dev-dependencies]
serde_json = "1.0.133"
