[package]
name = "links-normalized"
version = "0.2.0"
edition = "2021"
publish = false
authors = ["janm-dev"]
description = "Easy to use case-insensitive normalized unicode strings and web URLs."
license = "AGPL-3.0-or-later"
repository = "https://github.com/janm-dev/links"
rust-version = "1.74"

[features]
# Support for conversion to/from Redis types using `fred`
fred = ["dep:fred"]

[dependencies]
fred = { version = "8.0.6", optional = true, default-features = false }
serde = { version = "1.0.201", features = ["derive"] }
thiserror = "1.0.60"
unicode-normalization = "0.1.23"
uriparse = "0.6.4"

[dev-dependencies]
serde_json = "1.0.117"
