[package]
name = "links-normalized"
version = "0.2.0"
edition = "2021"
publish = false
authors = ["janm-dev"]
description = "Easy to use case-insensitive normalized unicode strings and web URLs."
license = "AGPL-3.0-or-later"
repository = "https://github.com/janm-dev/links"
rust-version = "1.77.0"

[features]
# Support for conversion to/from Redis types using `fred`
fred = ["dep:fred"]

[dependencies]
fred = { version = "9.3.0", optional = true, default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
unicode-normalization = "0.1.24"
uriparse = "0.6.4"

[dev-dependencies]
serde_json = "1.0.134"
