[package]
name = "links"
version = "0.2.0"
edition = "2021"
publish = false
authors = ["janm-dev"]
description = "An easy to set up selfhostable link shortener."
license = "AGPL-3.0-or-later"
repository = "https://github.com/janm-dev/links"
rust-version = "1.81.0"
default-run = "server"

[features]
# Run tests involving a Redis server. Needs a running links-compatible Redis
# server on localhost:6379 (TCP) and localhost:6380 (TLS) when running tests.
test-redis = []

[dependencies]
links-id = { path = "../links-id", version = "*", features = [
	"fred",
] }
links-normalized = { path = "../links-normalized", version = "*", features = [
	"fred",
] }
links-domainmap = { path = "../links-domainmap", version = "*", features = [
	"serde",
] }
anyhow = "1.0.92"
async-trait = "0.1.83"
basic-toml = "0.1.9"
clap = { version = "4.5.20", features = ["derive", "env"] }
colored = "2.1.0"
crossbeam-channel = "0.5.13"
fred = { version = "9.3.0", features = [
	"metrics",
	"enable-rustls-ring",
	"partial-tracing",
] }
hyper = "1.5.0"
hyper-util = { version = "0.1.10", features = [
	"http1",
	"http2",
	"server",
	"service",
	"tokio",
] }
notify = "7.0.0"
parking_lot = "0.12.3"
pico-args = { version = "0.5.0", features = [
	"combined-flags",
], default-features = false }
prost = "0.13.3"
rand = "0.8.5"
regex = "1.11.1"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
socket2 = "0.5.7"
thiserror = "1.0.66"
time = { version = "0.3.36", features = [
	"macros",
	"parsing",
	"formatting",
] }
tokio = { version = "1.41.0", features = [
	"rt-multi-thread",
] }
tokio-rustls = { version = "0.26.0", default-features = false, features = [
	"logging",
	"ring",
	"tls12",
] }
tonic = { version = "0.12.3", default-features = false, features = [
	"gzip",
	"tls",
	"tls-roots",
	"channel",
	"codegen",
	"prost",
	"server",
] }
tower = { version = "0.5.1", features = ["util"] }
tracing = "0.1.40"
tracing-appender = { version = "0.2.3", features = [
	"parking_lot",
] }
tracing-subscriber = "0.3.18"
strum = { version = "0.26.3", features = ["derive"] }

[build-dependencies]
base64 = "0.22.1"
lol_html = "1.2.1"
minify-html = "0.15.0"
sha2 = "0.10.8"
tonic-build = "0.12.3"

[dev-dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.9", default-features = false, features = [
	"http2",
	"rustls-tls-native-roots",
	"gzip",
] }
serial_test = "3.1.1"
tokio = { version = "1.41.0", features = ["full"] }
