[package]
name = "links"
version = "0.2.0"
edition = "2021"
publish = false
authors = ["janm-dev"]
description = "An easy to set up selfhostable link shortener."
license = "AGPL-3.0-or-later"
repository = "https://github.com/janm-dev/links"
rust-version = "1.81.0"
default-run = "server"

[features]
# Run tests involving a Redis server. Needs a running links-compatible Redis
# server on localhost:6379 (TCP) and localhost:6380 (TLS) when running tests.
test-redis = []

[dependencies]
links-id = { path = "../links-id", version = "*", features = [
	"fred",
] }
links-normalized = { path = "../links-normalized", version = "*", features = [
	"fred",
] }
links-domainmap = { path = "../links-domainmap", version = "*", features = [
	"serde",
] }
anyhow = "1.0.97"
async-trait = "0.1.88"
basic-toml = "0.1.10"
clap = { version = "4.5.32", features = ["derive", "env"] }
colored = "3.0.0"
crossbeam-channel = "0.5.15"
fred = { version = "9.3.0", features = [
	"metrics",
	"enable-rustls-ring",
	"partial-tracing",
] }
hyper = "1.6.0"
hyper-util = { version = "0.1.10", features = [
	"http1",
	"http2",
	"server",
	"service",
	"tokio",
] }
notify = "8.0.0"
parking_lot = "0.12.3"
pico-args = { version = "0.5.0", features = [
	"combined-flags",
], default-features = false }
prost = "0.13.5"
rand = "0.8.5"
regex = "1.11.1"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
socket2 = "0.5.8"
thiserror = "2.0.12"
time = { version = "0.3.41", features = [
	"macros",
	"parsing",
	"formatting",
] }
tokio = { version = "1.44.2", features = [
	"rt-multi-thread",
] }
tokio-rustls = { version = "0.26.2", default-features = false, features = [
	"logging",
	"ring",
	"tls12",
] }
tonic = { version = "0.12.3", default-features = false, features = [
	"gzip",
	"tls",
	"tls-roots",
	"channel",
	"codegen",
	"prost",
	"server",
] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-appender = { version = "0.2.3", features = [
	"parking_lot",
] }
tracing-subscriber = "0.3.19"
strum = { version = "0.27.1", features = ["derive"] }

[build-dependencies]
base64 = "0.22.1"
lol_html = "1.2.1"
minify-html = "0.15.0"
sha2 = "0.10.8"
tonic-build = "0.14.0"

[dev-dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = [
	"http2",
	"rustls-tls-native-roots",
	"gzip",
] }
serial_test = "3.1.1"
tokio = { version = "1.44.2", features = ["full"] }
